<resources>
    <string name="app_name">Chat U &amp; me</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textFnd">Friend UserName</string>
    <string name="empty"></string>
    <string name="add">ADD</string>
    <string name="Cencle">Cencle</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="confirmemail">Confirm Email</string>
    <string name="signup">Sign Up</string>
</resources>
