<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:padding="@dimen/samepadding"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="407dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/messagehistorybox"
        android:layout_weight="0.38" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/empty"
            android:id="@+id/sendMessage"
            android:layout_weight="1.01" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/send"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>